--- a/runtime-manager/v/latest/cloudhub-faq.adoc
+++ b/runtime-manager/v/latest/cloudhub-faq.adoc
@@ -74,7 +74,7 @@ See link:http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availa
 
 == How can I integrate my application to an Amazon RDS Database
 
-You can easily integrate your pplication deployed to CloudHub with MySQL or Oracle using Amazon Relational Database Service (RDS). Refer to the link:http://aws.amazon.com/rds/[Amazon RDS documentation] to learn how to set up a new database.
+You can easily integrate your application deployed to CloudHub with MySQL or Oracle using Amazon Relational Database Service (RDS). Refer to the link:http://aws.amazon.com/rds/[Amazon RDS documentation] to learn how to set up a new database.
 
 Before using CloudHub with Amazon RDS, you must configure RDS security. This allows Mule to communicate with Amazon RDS. To configure RDS security:
 
